# rust-builder

./: .dockerignore  .env.api-mysql.example  .env.api-postgres.example  .env.mysql.example  .env.postgres.example  .gitignore  CLAUDE.md  Claude.md  Makefile  README.md  compose.yaml  docker-compose.api-postgres.yml  docker-compose.yml  readme.md
.claude/commands/: commit.md
.github/: copilot-instructions.md
api/: Cargo.toml  bacon.toml
api/src/: main.rs
api/src/endpoints/: mod.rs  user.rs
api/src/query_builder/: mod.rs
api/src/query_builder/builder/: mod.rs
api/src/query_builder/builder/mysql/: mod.rs
api/src/query_builder/builder/postgres/: mod.rs
api/src/query_builder/directors/: upsert_user.rs  user.rs
api/src/repository/: mod.rs  user.rs
api/src/repository/mysql/: mod.rs  user.rs
api/src/repository/postgres/: mod.rs  user.rs
containers/api-test/: Dockerfile
crates/api-test/: Cargo.toml
crates/api-test/src/: tests.rs
crates/api_test/: Cargo.toml
crates/api_test/src/: main.rs  tests.rs
crates/api_test/src/tests/learning/: graphql.rs
docker/: Dockerfile
docker/api/: Dockerfile
docker/mysql/: Dockerfile
docker/mysql/init/: 01_create_tables.sql
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/init/: 01_create_tables.sql
