[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["mysql","postgres", "runtime-tokio"] }
async-trait = "0.1.88"
